--- a/index.html
+++ b/index.html
@@ -102,6 +102,32 @@
 			transition-duration: 3s, 5s;
 		}
 	</style>
+
+	<!-- Accordion -->
+	<style>
+		.collapsible {
+			background-color: #777;
+			color: white;
+			cursor: pointer;
+			padding: 18px;
+			width: 100%;
+			border: none;
+			text-align: left;
+			outline: none;
+			font-size: 15px;
+		}
+		
+		.active, .collapsible:hover {
+			background-color: #555;
+		}
+		
+		.content {
+			padding: 0 18px;
+			display: none;
+			overflow: hidden;
+			background-color: #f1f1f1;
+		}
+	</style>
 </head>
 <body>
 	<section class="hero is-dark is-fullheight">
