--- a/index.html
+++ b/index.html
@@ -294,40 +294,10 @@
 				<p class="title has-text-centered" id="information">
 				  Actualités
 				</p>
-				<section class="accordions">
-					<article class="accordion is-active">
-						<div class="accordion-header toggle">
-							<p>Hello World</p>
-						</div>
-						<div class="accordion-body">
-							<div class="accordion-content">
-							  Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-							</div>
-					  	</div>
-					</article>
-					<article class="accordion">
-						<div class="accordion-header">
-							<p>Hello World</p>
-							<button class="toggle" aria-label="toggle"></button>
-						</div>
-						<div class="accordion-body">
-							<div class="accordion-content">
-							  Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-							</div>
-						</div>
-					</article>
-					<article class="accordion">
-						<div class="accordion-header">
-							<p>Hello World</p>
-							<button class="toggle" aria-label="toggle"></button>
-						</div>
-						<div class="accordion-body">
-							<div class="accordion-content">
-							  Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
-							</div>
-						</div>
-					</article>
-				</section>
+				<div class="content is-large">
+					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
+					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
+				</div>
 				<button type="button" class="collapsible">Open Section 1</button>
 				<div class="content">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
