--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			background-color: #555;
 		}
 		
-		.content {
+		.content, .collapse {
 			padding: 0 18px;
 			display: none;
 			overflow: hidden;
@@ -299,15 +299,15 @@
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
 				<button type="button" class="collapsible">Open Section 1</button>
-				<div class="content">
+				<div class="content collapse">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
 				<button type="button" class="collapsible">Open Section 2</button>
-				<div class="content">
+				<div class="content collapse">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
 				<button type="button" class="collapsible">Open Section 3</button>
-				<div class="content">
+				<div class="content collapse">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div>
 			</div>
