--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 			background-color: #555;
 		}
 		
-		.content, .collapse {
+		.content.collapse {
 			padding: 0 18px;
 			display: none;
 			overflow: hidden;
-			background-color: #f1f1f1;
+			background-color: #545454;
 		}
 	</style>
 </head>
