--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 			padding: 0 18px;
 			display: none;
 			overflow: hidden;
-			background-color: #545454;
+			background-color: #1d1d1d;
 		}
 	</style>
 </head>
