--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		}
 		
 		.content.collapse {
-			padding: 0 18px;
+			padding: 1rem 18px;
 			display: none;
 			overflow: hidden;
 			background-color: #1d1d1d;
