--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			border: none;
 			text-align: left;
 			outline: none;
-			font-size: 15px;
+			font-size: 1.5rem;
 		}
 		
 		.active, .collapsible:hover {
