--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 			padding: 1rem 18px;
 			display: none;
 			overflow: hidden;
+			transition: max-height 0.2s ease-out;
 			background-color: #1d1d1d;
 		}
 	</style>
@@ -416,26 +417,21 @@
 		});
 	</script>
 
-	<!-- Script for accordion -->
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-accordion@2.0.1/dist/js/bulma-accordion.min.js"></script>
-	<script>
-		bulmaAccordion.attach();
-	</script>
-
+	<!-- Script for Collapse -->
 	<script>
 		var coll = document.getElementsByClassName("collapsible");
 		var i;
 		
 		for (i = 0; i < coll.length; i++) {
-			coll[i].addEventListener("click", function() {
-				this.classList.toggle("active");
-				var content = this.nextElementSibling;
-				if (content.style.display === "block") {
-					content.style.display = "none";
-				} else {
-					content.style.display = "block";
-				}
-			});
+		  coll[i].addEventListener("click", function() {
+			this.classList.toggle("active");
+			var content = this.nextElementSibling;
+			if (content.style.maxHeight){
+			  content.style.maxHeight = null;
+			} else {
+			  content.style.maxHeight = content.scrollHeight + "px";
+			} 
+		  });
 		}
 	</script>
 	
