--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		
 		.content.collapse {
 			padding: 1rem 18px;
-			display: none;
+			max-height: 0;
 			overflow: hidden;
 			transition: max-height 0.2s ease-out;
 			background-color: #1d1d1d;
