--- a/index.html
+++ b/index.html
@@ -122,12 +122,15 @@
 		}
 		
 		.content.collapse {
-			padding: 1rem 18px;
+			padding: 0 18px;
 			max-height: 0;
 			overflow: hidden;
 			transition: max-height 0.2s ease-out;
 			background-color: #1d1d1d;
 		}
+
+		.content.collapse.active {
+			padding: 1rem 18px;
 	</style>
 </head>
 <body>
