--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			background-color: #1d1d1d;
 		}
 
-		.collapsible.active:.content.collapse {
+		.collapsible.active::content.collapse {
 			padding: 1rem 18px;
 	</style>
 </head>
