--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
 			background-color: #555;
 		}
 		
+		.collapsible:after {
+			content: '\002B';
+			color: white;
+			font-weight: bold;
+			float: right;
+			margin-left: 5px;
+		}
+
+		.active:after {
+			content: "\2212";
+		}
+
 		.content.collapse {
 			padding: 0 18px;
 			max-height: 0;
