--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		}
 		
 		.collapsible:after {
-			content: '\002B';
+			content: '\02C5';
 			color: white;
 			font-weight: bold;
 			float: right;
@@ -130,7 +130,7 @@
 		}
 
 		.active:after {
-			content: "\2212";
+			content: "\02C4";
 		}
 
 		.content.collapse {
