--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			background-color: #1d1d1d;
 		}
 
-		.collapsible.active content.collapse {
+		.collapsible.active div {
 			padding: 1rem 18px;
 		}
 	</style>
