--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			background-color: #1d1d1d;
 		}
 
-		.collapsible.active div p {
+		.collapsible div p {
 			padding: 1rem 18px;
 		}
 	</style>
