--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
-				<button type="button" class="collapsible">Open Section 1</button>
+				<button type="button" class="collapsible">10/02/2021 - Nom de domaine</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p style="padding: 1rem 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be">OVH</a>.</p>
 				</div>
 				<button type="button" class="collapsible">Open Section 2</button>
 				<div class="content collapse is-medium">
