--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 				</div>
 				<button type="button" class="collapsible">10/02/2021 - Nom de domaine</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be">OVH</a>.</p>
+					<p style="padding: 1rem 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
 				</div>
 				<button type="button" class="collapsible">Open Section 2</button>
 				<div class="content collapse is-medium">
