--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@
 
 	<style>
 		.background-banner {
+			/*width: 100%;*/
+
+			/* The image used */
 			background-image: url(http://arduitank.be/img/banner.png);
+
+			/* Set a specific height */
+			min-height: 500px; 
+
+			/* Create the parallax scrolling effect */
+			background-attachment: fixed;
+			background-position: center;
+			background-repeat: no-repeat;
 			background-size: cover;
-			width: 100%;
-			background-position: 0;
 		}
 
 		/* Scrollbar */
@@ -313,7 +322,13 @@
 				</div>
 				<button type="button" class="collapsible">10/02/2021 - Nom de domaine</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
+					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
+					<p style="padding: 0 18px 1rem 18px;">Nous avons donc activé l'hébergement lié avec l'offre.</p>
+				</div>
+				<button type="button" class="collapsible">10/02/2021 - Reconnaissance vocal</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
+					<p style="padding: 0 18px 1rem 18px;">Nous avons donc activé l'hébergement lié avec l'offre.</p>
 				</div>
 				<button type="button" class="collapsible">Open Section 2</button>
 				<div class="content collapse is-medium">
@@ -454,7 +469,6 @@
 		  });
 		}
 	</script>
-	
 
 	<!-- Script scroll to top -->
 	<script>
