--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: cover;
+
+			z-index: -1;
+			transform: translateZ(-1px) scale(2);
 		}
 
 		/* Scrollbar */
