--- a/index3.html
+++ b/index3.html
@@ -1,21 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CSS Parallax Scrolling Effect Demonstration</title>
-    <meta name="description" content="A CSS parallax scrolling effect that works in all major desktop and mobile browsers." />
-    <meta name="keywords" content="css parallax scrolling, css parallax scroll, css" />
-    <meta name="viewport" content="width=device-width, height=device-height, viewport-fit=cover, initial-scale=1" />
-    <link rel="canonical" href="https://orangeable.com/tools/css-parallax-scroll/" /> <link type="text/css" href="css/main.css" rel="stylesheet" />
+	<title>CSS Parallax Scrolling Effect Demonstration</title>
+	<meta name="description" content="A CSS parallax scrolling effect that works in all major desktop and mobile browsers." />
+	<meta name="keywords" content="css parallax scrolling, css parallax scroll, css" />
+	<meta name="viewport" content="width=device-width, height=device-height, viewport-fit=cover, initial-scale=1" />
+	<link rel="canonical" href="https://orangeable.com/tools/css-parallax-scroll/" /> 
+	<style>
+		html, body {
+			padding: 0px;
+			margin: 0px;
+		}
+
+		html {
+			overflow: hidden;
+		}
+
+		body {
+			width: 100vw;
+			height: 100vh;
+			overflow-x: hidden;
+			overflow-y: auto;
+			perspective: 1px;
+			-webkit-perspective: 1px;
+			transform-style: preserve-3d;
+			-webkit-transform-style: preserve-3d;
+		}
+
+		div.parallax {
+			width: 100vw;
+			height: 100vh;
+			position: relative;
+			transform-style: preserve-3d;
+			-webkit-transform-style: preserve-3d;
+		}
+
+		div.parallax:after {
+			background-image: url("../img/bg.jpg");
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: cover;
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			right: 0px;
+			bottom: 0px;
+			z-index: -1;
+			content: "";
+			transform: translateZ(-1px) scale(2);
+			-webkit-transform: translateZ(-1px) scale(2);
+		}
+
+		h1 {
+			width: 60%;
+			font-family: "Arial";
+			font-size: 100pt;
+			color: #222;
+			text-align: right;
+			padding: 20vh 175px;
+			margin: 0px;
+			float: right;
+		}
+
+		div.content-outer {
+			width: 100%;
+			background-color: white;
+			perspective: 2px;
+			-webkit-perspective: 2px;
+		}
+
+		div.content-inner {
+			width: 1200px;
+			font-family: "Arial";
+			font-size: 13pt;
+			color: #333;
+			line-height: 1.40em;
+			padding: 50px 20px;
+			margin: 0px auto;
+			display: block;
+		}
+
+		@media (max-width: 768px) {
+			h1 {
+				width: 88%;
+				font-size: 50pt;
+				padding: 10vh 20px;
+				float: none;
+			}
+
+			div.content-inner {
+				width: 80%;
+				text-align: justify;
+				padding: 20px 0px;
+			}
+		}
+	</style>
 </head>
 <body>
-    <div class="parallax">
-        <h1>This is a Parallax Scroll Example</h1>
-    </div>
-    <div class="content-outer">
-        <div class="content-inner">
-            <p>For the full explanation of how the CSS parallax scroll effect works, <a href="/css/parallax-scroll">read the detailed article</a>.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sed risus in dui porta elementum. Sed vehicula ante dignissim lacinia egestas. Integer eget massa tellus. Nunc blandit neque enim, non faucibus nisl dignissim aliquam. Vestibulum et ipsum eget tellus venenatis bibendum a at arcu. Quisque congue faucibus nisl, sed tristique eros suscipit nec. Donec quis tincidunt urna. Sed urna dui, placerat aliquet pulvinar vitae, blandit sed lorem. Curabitur et venenatis nibh, id feugiat nulla. Suspendisse ac mi diam. Nulla vitae odio metus. Praesent id sagittis dolor, non efficitur ligula.</p> <p>Fusce suscipit eget felis nec euismod. Maecenas odio lacus, aliquam sit amet libero eget, posuere dignissim odio. Nunc porta elementum massa, nec facilisis tortor sodales in. Nulla lacus felis, elementum ac urna a, fringilla ultrices ipsum. Pellentesque dapibus congue fermentum. Praesent tempus risus eget augue viverra, sed tincidunt lacus posuere. Proin rhoncus nisi libero, vel ultrices ipsum egestas lobortis. Fusce scelerisque accumsan nisi. Quisque eget felis auctor, pulvinar elit vel, congue enim. Phasellus tincidunt felis velit, in mollis purus tincidunt sed. Vestibulum scelerisque ipsum ac pellentesque sagittis. Nam rutrum orci vitae enim volutpat consequat non id augue. Maecenas purus mi, volutpat sit amet elit id, dapibus pellentesque arcu.</p> <p>Etiam et bibendum tellus. Aliquam at tristique sapien. Mauris lacinia odio erat, et gravida diam luctus convallis. Phasellus eget velit et arcu placerat lobortis. Curabitur eleifend id elit quis lobortis. Praesent finibus sapien interdum, ultrices est eget, faucibus erat. Aliquam neque nibh, fringilla laoreet auctor vestibulum, vestibulum quis nisl.</p> <p>Sed non metus ut massa pretium faucibus. Nam porta, lorem vel sodales sollicitudin, felis mi dignissim urna, euismod dapibus ante massa vitae odio. Vivamus porttitor tristique mauris, vel tempus ligula convallis non. Aliquam finibus dui nec nibh ornare, nec scelerisque sem molestie. Aenean non leo quis massa scelerisque volutpat vel in dolor. Curabitur vel massa nec tellus tempus tempor. Pellentesque dignissim ex nec augue viverra scelerisque. Pellentesque eget tortor euismod, efficitur sem at, maximus ipsum.</p> <p>Pellentesque ipsum sem, pretium non turpis eu, hendrerit eleifend neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean et porta urna, et lobortis enim. Aliquam erat volutpat. Nunc molestie consequat erat. Donec non tempus orci. Sed vitae elit lorem. Aliquam erat volutpat.</p>
-        </div>
-    </div>
+	<div class="parallax">
+		<h1>This is a Parallax Scroll Example</h1>
+	</div>
+	<div class="content-outer">
+		<div class="content-inner">
+			<p>For the full explanation of how the CSS parallax scroll effect works, <a href="/css/parallax-scroll">read the detailed article</a>.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sed risus in dui porta elementum. Sed vehicula ante dignissim lacinia egestas. Integer eget massa tellus. Nunc blandit neque enim, non faucibus nisl dignissim aliquam. Vestibulum et ipsum eget tellus venenatis bibendum a at arcu. Quisque congue faucibus nisl, sed tristique eros suscipit nec. Donec quis tincidunt urna. Sed urna dui, placerat aliquet pulvinar vitae, blandit sed lorem. Curabitur et venenatis nibh, id feugiat nulla. Suspendisse ac mi diam. Nulla vitae odio metus. Praesent id sagittis dolor, non efficitur ligula.</p> <p>Fusce suscipit eget felis nec euismod. Maecenas odio lacus, aliquam sit amet libero eget, posuere dignissim odio. Nunc porta elementum massa, nec facilisis tortor sodales in. Nulla lacus felis, elementum ac urna a, fringilla ultrices ipsum. Pellentesque dapibus congue fermentum. Praesent tempus risus eget augue viverra, sed tincidunt lacus posuere. Proin rhoncus nisi libero, vel ultrices ipsum egestas lobortis. Fusce scelerisque accumsan nisi. Quisque eget felis auctor, pulvinar elit vel, congue enim. Phasellus tincidunt felis velit, in mollis purus tincidunt sed. Vestibulum scelerisque ipsum ac pellentesque sagittis. Nam rutrum orci vitae enim volutpat consequat non id augue. Maecenas purus mi, volutpat sit amet elit id, dapibus pellentesque arcu.</p> <p>Etiam et bibendum tellus. Aliquam at tristique sapien. Mauris lacinia odio erat, et gravida diam luctus convallis. Phasellus eget velit et arcu placerat lobortis. Curabitur eleifend id elit quis lobortis. Praesent finibus sapien interdum, ultrices est eget, faucibus erat. Aliquam neque nibh, fringilla laoreet auctor vestibulum, vestibulum quis nisl.</p> <p>Sed non metus ut massa pretium faucibus. Nam porta, lorem vel sodales sollicitudin, felis mi dignissim urna, euismod dapibus ante massa vitae odio. Vivamus porttitor tristique mauris, vel tempus ligula convallis non. Aliquam finibus dui nec nibh ornare, nec scelerisque sem molestie. Aenean non leo quis massa scelerisque volutpat vel in dolor. Curabitur vel massa nec tellus tempus tempor. Pellentesque dignissim ex nec augue viverra scelerisque. Pellentesque eget tortor euismod, efficitur sem at, maximus ipsum.</p> <p>Pellentesque ipsum sem, pretium non turpis eu, hendrerit eleifend neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean et porta urna, et lobortis enim. Aliquam erat volutpat. Nunc molestie consequat erat. Donec non tempus orci. Sed vitae elit lorem. Aliquam erat volutpat.</p>
+		</div>
+	</div>
 </body>
 </html>
