--- a/index3.html
+++ b/index3.html
@@ -36,7 +36,7 @@
 		}
 
 		div.parallax:after {
-			background-image: url("../img/bg.jpg");
+			background-image: url(http://arduitank.be/img/banner.png);
 			background-repeat: no-repeat;
 			background-position: center;
 			background-size: cover;
