--- a/index.html
+++ b/index.html
@@ -234,18 +234,34 @@
 				  Information
 				</p>
 				<div class="content is-large">
-					<h1 class="is-white">Hello World</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque.</p>
-					<h2 class="is-white">Second level</h2>
-					<p>Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.</p>
+					<h1 class="is-white">Qui sommes-nous ?</h1>
+					<p>Nous sommes en 2ème année en école supérieur en automatisation. Dans le cadre du cours de robotique, nous avons décidé de faire un tank télécommandé.</p>
+					<p>Nous ne nous limitons pas qu'à de la programmation en C/C++ (Arduino) comme demandé, en effet nous développons aussi une application pour ordinateur ainsi que le site sur lequel vous vous trouvez actuellement.</p>
+					<h2 class="is-white">Consignes</h2>
+					<p>Purement pour le cours, nous devons respecter ces consignes :</p>
 					<ul>
-						<li>In fermentum leo eu lectus mollis, quis dictum mi aliquet.</li>
-						<li>Morbi eu nulla lobortis, lobortis est in, fringilla felis.</li>
-						<li>Aliquam nec felis in sapien venenatis viverra fermentum nec lectus.</li>
-						<li>Ut non enim metus.</li>
+						<li>Robot mobile</li>
+						<li>Radio commandée => Télécommande a réalisé avec un Arduino + Bluetooth + …</li>
 					</ul>
+					<p>Comme composants que l'on doit intégrer il y a :</p>
+					<ul>
+						<li>Sonar (ultrason)</li>
+						<li>Bras articule (servo Moteur)</li>
+						<li>Lecteur TAG RFID => Start en Mode « compétition »</li>
+						<li>Afficheur LCD</li>
+						<li>LEDs</li>
+						<li>Buzzer (optionnel)</li>
+					</ul>
+					<h1 class="is-white">Où en sommes-nous ?</h1>
+					<p>Nous avons un projet ambitieux ! Mais nous sommes motivés !</p>
+					<p>Pour savoir un peu où nous en sommes :</p>
+					<p>Arduino (tous) :</p>
+					<progress class="progress is-primary" value="5" max="100">5%</progress>
+					<p>Application (Davide et Ugo) :</p>
+					<progress class="progress" value="30" max="100">30%</progress>
+					<p>Site (Antonin) :</p>
+					<progress class="progress is-info" value="30" max="100">30%</progress>
 				</div>
-				<progress class="progress" value="15" max="100">15%</progress>
 			</div>
 		</div>
 
@@ -322,13 +338,15 @@
 				</div>
 				<button type="button" class="collapsible">10/02/2021 - Nom de domaine</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
+					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a class="is-link" href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
 					<p style="padding: 0 18px 1rem 18px;">Nous avons donc activé l'hébergement lié avec l'offre.</p>
 				</div>
 				<button type="button" class="collapsible">10/02/2021 - Reconnaissance vocal</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
-					<p style="padding: 0 18px 1rem 18px;">Nous avons donc activé l'hébergement lié avec l'offre.</p>
+					<p style="padding: 1rem 18px 0 18px;">Ugo, pour l'interface (application) a développé un code qui utilise <a class="is-link" href="https://cloud.google.com/speech-to-text" target="_blank">la détection de voix avec Google</a>.</p>
+					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
+					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
+					<img style="padding: 0 18px 1rem 18px;" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
 				</div>
 				<button type="button" class="collapsible">Open Section 2</button>
 				<div class="content collapse is-medium">
