--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
 			background-size: cover;
 		}
 
+		.content.h2 {
+			color: white;
+		}
+
+		div {
+			transition-property: opacity, left, top, height;
+			transition-duration: 3s, 5s;
+		}
+	</style>
+
+	<!-- Scrollbar -->
+	<style>
 		/* Scrollbar */
 		::-webkit-scrollbar {
 			width: 10px;
@@ -77,7 +89,10 @@
 		::-webkit-scrollbar-thumb {
 			background: #545454; 
 		}
+	</style>
 
+	<!-- Go up button -->
+	<style>
 		/* Button Up */
 		#scroll_to_top {
 			display: none;
@@ -101,14 +116,6 @@
 
 		#scroll_to_top:hover {
 			background-color: rgba(255, 255, 255, 0.8);
-		}
-
-
-
-
-		div {
-			transition-property: opacity, left, top, height;
-			transition-duration: 3s, 5s;
 		}
 	</style>
 
