--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			background-size: cover;
 		}
 
-		.content.h2 {
+		.content h2 {
 			color: white;
 		}
 
@@ -241,10 +241,10 @@
 				  Information
 				</p>
 				<div class="content is-large">
-					<h1 class="is-white">Qui sommes-nous ?</h1>
+					<h2>Qui sommes-nous ?</h1>
 					<p>Nous sommes en 2ème année en école supérieur en automatisation. Dans le cadre du cours de robotique, nous avons décidé de faire un tank télécommandé.</p>
 					<p>Nous ne nous limitons pas qu'à de la programmation en C/C++ (Arduino) comme demandé, en effet nous développons aussi une application pour ordinateur ainsi que le site sur lequel vous vous trouvez actuellement.</p>
-					<h2 class="is-white">Consignes</h2>
+					<h2>Consignes</h2>
 					<p>Purement pour le cours, nous devons respecter ces consignes :</p>
 					<ul>
 						<li>Robot mobile</li>
@@ -259,7 +259,7 @@
 						<li>LEDs</li>
 						<li>Buzzer (optionnel)</li>
 					</ul>
-					<h1 class="is-white">Où en sommes-nous ?</h1>
+					<h2>Où en sommes-nous ?</h1>
 					<p>Nous avons un projet ambitieux ! Mais nous sommes motivés !</p>
 					<p>Pour savoir un peu où nous en sommes :</p>
 					<p>Arduino (tous) :</p>
