--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
 			background-size: cover;
 		}
 
+		/* Colors */
 		.content h2 {
 			color: white;
+		}
+		.progress.is-arduino1::-moz-progress-bar {
+			background-color: rgb(0, 129, 132);
 		}
 
 		div {
@@ -263,7 +267,7 @@
 					<p>Nous avons un projet ambitieux ! Mais nous sommes motivés !</p>
 					<p>Pour savoir un peu où nous en sommes :</p>
 					<p>Arduino (tous) :</p>
-					<progress class="progress" style="color: rgb(0, 129, 132);" value="5" max="100">5%</progress>
+					<progress class="progress is-arduino1" value="5" max="100">5%</progress>
 					<p>Application (Davide et Ugo) :</p>
 					<progress class="progress" value="30" max="100">30%</progress>
 					<p>Site (Antonin) :</p>
