--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 		.progress.is-arduino1::-moz-progress-bar {
 			background-color: rgb(0, 129, 132);
 		}
+		.progress.is-arduino1::-webkit-progress-value {
+			background-color: rgb(0, 129, 132);
+		}
 
 		div {
 			transition-property: opacity, left, top, height;
