--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 		.content h2 {
 			color: white;
 		}
-		.progress.is-arduino1::-moz-progress-bar {
-			background-color: rgb(0, 129, 132);
-		}
 		.progress.is-arduino1::-webkit-progress-value {
 			background-color: rgb(0, 129, 132);
+		}
+		.progress.is-arduino2::-webkit-progress-value {
+			background-color: rgb(23, 161, 165);
 		}
 
 		div {
@@ -271,6 +271,14 @@
 					<p>Pour savoir un peu où nous en sommes :</p>
 					<p>Arduino (tous) :</p>
 					<progress class="progress is-arduino1" value="5" max="100">5%</progress>
+					<span>
+						<p>Robot :</p>
+						<progress class="progress is-arduino2" value="5" max="100">5%</progress>
+					</span>
+					<span>
+						<p>Télécommande :</p>
+						<progress class="progress is-arduino2" value="5" max="100">5%</progress>
+					</span>
 					<p>Application (Davide et Ugo) :</p>
 					<progress class="progress" value="30" max="100">30%</progress>
 					<p>Site (Antonin) :</p>
