--- a/index.html
+++ b/index.html
@@ -271,10 +271,7 @@
 					<p>Pour savoir un peu où nous en sommes :</p>
 					<p>Arduino (tous) :</p>
 					<progress class="progress is-arduino1" value="5" max="100">5%</progress>
-					<span>
-						<p>Robot :</p>
-						<progress class="progress is-arduino2" value="5" max="100">5%</progress>
-					</span>
+					<p>Robot : <progress class="progress is-arduino2" value="5" max="100">5%</progress></p>
 					<span>
 						<p>Télécommande :</p>
 						<progress class="progress is-arduino2" value="5" max="100">5%</progress>
