--- a/index.html
+++ b/index.html
@@ -271,7 +271,12 @@
 					<p>Pour savoir un peu où nous en sommes :</p>
 					<p>Arduino (tous) :</p>
 					<progress class="progress is-arduino1" value="5" max="100">5%</progress>
-					<p>Robot : <progress class="progress is-arduino2" value="5" max="100">5%</progress></p>
+					<div class="columns is-mobile">
+						<div class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">
+							<p>Robot :</p>
+						</div>
+						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
+					</div>
 					<span>
 						<p>Télécommande :</p>
 						<progress class="progress is-arduino2" value="5" max="100">5%</progress>
