--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
 					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
+					<!--<p style="padding: 0 18px 1rem 18px;">Fichier développé <a class="is-link" href="https://cdn.discordapp.com/attachments/807610088361164810/809157469791191070/APPLI_VOCAL.py" target="_blank">ici</a></p>-->
 				</div>
 				<button type="button" class="collapsible">Open Section 2</button>
 				<div class="content collapse is-medium">
