--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
 		.progress.is-arduino2::-webkit-progress-value {
 			background-color: rgb(23, 161, 165);
 		}
+		.hero.is-dark a {
+			color: #3273dc!important;
+		}
+		.hero.is-dark a:hover {
+			color: white!important;
+		}
+
 
 		div {
 			transition-property: opacity, left, top, height;
