--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 		.progress.is-arduino2::-webkit-progress-value {
 			background-color: rgb(23, 161, 165);
 		}
-		.hero.is-dark a {
+		.hero.is-dark a:not(.navbar) {
 			color: #3273dc!important;
 		}
-		.hero.is-dark a:hover {
+		.hero.is-dark a:hover:not(.navbar) {
 			color: white!important;
 		}
 
