--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 		.progress.is-arduino2::-webkit-progress-value {
 			background-color: rgb(23, 161, 165);
 		}
-		.hero.is-dark a:not(.navbar) {
+		/*.hero.is-dark a:not(.navbar) {
 			color: #3273dc!important;
 		}
 		.hero.is-dark a:hover:not(.navbar) {
 			color: white!important;
-		}
+		}*/
 
 
 		div {
