--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 					<p>Arduino (tous) :</p>
 					<progress class="progress is-arduino1" value="5" max="100">5%</progress>
 					<div class="columns is-mobile">
-						<div class="column is-two-fifths-mobile is-one-fifth-tablet is-one-fifth-desktop is-one-fifth-widescreen is-one-fifth-fullhd">
+						<div class="column is-3">
 							<p>Robot :</p>
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
