--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 					<p>Arduino (tous) :</p>
 					<progress class="progress is-arduino1" value="5" max="100">5%</progress>
 					<div class="columns is-mobile">
-						<div class="column is-2">
+						<div class="column is-4-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
 							<p>Robot :</p>
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
